# ec2-hunter

./: README.md  ec2-hunter.py  pyproject.toml  requirements.txt
tests/: test_ec2_hunter.py
